--- a/HTML & CSS - 06_2022/style.css
+++ b/HTML & CSS - 06_2022/style.css
@@ -1,14 +1,27 @@
-style.css
 
-.CONTATO {
-
-	font-size: 30px;
-	color: darkslategray;
+#contato {
+	font-size: 22px;
+	color: black;
+	font-family: monospace;
 }
 
 #title {
 	font-size: 40px;
-	color: black;
+	color: darkblue;
+	font-family: cursive;
+}
+
+.texto_pagina {
+
+	font-family: 25px;
+	font-family: monospace;
+}
+
+.texto_2 {
+	font-family: 25px;
+	font-family: monospace;
+	color: red;
 
 }
+
 
